--- a/public/index.html
+++ b/public/index.html
@@ -28,5 +28,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <img src="../src/images/crowdfund-fem-screenshot.png" alt="">
   </body>
 </html>
