--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Auddity Front End Development Portfolio Site created using create-react-app"
     />
+    <meta name="author" content="James Bretz">
+    <meta name="keywords" content="React, HTML, JavaScript, Sass, CSS, Portfolio, Web Development, Front End Development, Front End, Coding, Development, Front End Programming, React Icons, React Router, Hooks, Custom Hooks, Framer Motion">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caudex:wght@400;700&display=swap" rel="stylesheet">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap" rel="stylesheet"> 
 
     <title>Auddity | Front End Development Portfolio</title>
   </head>
