--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre&family=Marcellus&family=Marcellus+SC&display=swap" rel="stylesheet">
 
     <title>Auddity | Front End Development Portfolio</title>
   </head>
